--- a/app/src/main/res/layout/topic_info_activity.xml
+++ b/app/src/main/res/layout/topic_info_activity.xml
@@ -6,6 +6,7 @@
 
     <include layout="@layout/topic_info_title" />
         <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/topic_info_refresh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
@@ -18,8 +19,9 @@
                     android:orientation="vertical">
                         <android.support.v7.widget.RecyclerView
                             android:layout_weight="2"
+                            android:id="@+id/topic_info_images"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="180dp"/>
 
                         <include layout="@layout/topic_main"
                             />
@@ -36,6 +38,7 @@
                                 android:background="#f1f1f1" />
 
                             <android.support.v7.widget.RecyclerView
+                                android:id="@+id/topic_info_comments"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp">
