--- a/app/src/main/res/layout/topic_main.xml
+++ b/app/src/main/res/layout/topic_main.xml
@@ -6,6 +6,7 @@
 
 
         <TextView
+            android:id="@+id/topic_info_title"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,11 +23,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/topic_info_time"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="2015744" />
 
             <TextView
+                android:id="@+id/topic_info_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -37,6 +40,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/topic_info_text"
                 android:layout_margin="5dp"
             android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,11 +58,13 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/topic_info_comm_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/comment" />
 
             <TextView
+                android:id="@+id/topic_info_comm"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -69,12 +75,14 @@
                 android:textSize="10sp" />
 
             <ImageView
+                android:id="@+id/topic_info_zan_image"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/life_zan" />
 
             <TextView
+                android:id="@+id/topic_info_zan"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
