--- a/app/src/main/res/layout/topic_publish_activity.xml
+++ b/app/src/main/res/layout/topic_publish_activity.xml
@@ -63,6 +63,8 @@
                 >
 
                 <TextView
+                    android:layout_gravity="center_vertical"
+                    android:textSize="15sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -76,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="8"
-                    android:text="123" />
+                    android:hint="文明发言" />
 
             </LinearLayout>
 
