--- a/app/src/main/res/layout/tree_hole_item.xml
+++ b/app/src/main/res/layout/tree_hole_item.xml
@@ -55,7 +55,7 @@
                 android:layout_weight="1">
 
                 <ImageView
-
+                    android:id="@+id/tree_zan_image"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
@@ -75,6 +75,7 @@
                     android:textSize="14sp" />
 
                 <ImageView
+                    android:id="@+id/tree_talk_image"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
