--- a/app/src/main/res/layout/tree_add_view.xml
+++ b/app/src/main/res/layout/tree_add_view.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:enabled="true"
         android:gravity="top"
-        android:hint="说说咱学校的事～～"
+        android:hint="说说咱学校的事～～ 文明发言"
         android:inputType="textMultiLine"
         android:maxLength="140"
         android:maxLines="10"
@@ -88,4 +88,37 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="3.2"
+            android:text="选择校区"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/tree_add_school"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:text="郑州大学"
+            android:textSize="15dp" />
+    </LinearLayout>
 </LinearLayout>
