--- a/app/src/main/res/layout/tree_hole_comm.xml
+++ b/app/src/main/res/layout/tree_hole_comm.xml
@@ -76,10 +76,21 @@
                         android:layout_weight="2.5">
 
                         <TextView
+
                             android:id="@+id/tree_info_comm_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:text="XXXX.XX.XX" />
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:id="@+id/tree_info_comm_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="right"
                             android:layout_marginLeft="5dp"
                             android:text="XXXX.XX.XX" />
 
