--- a/app/src/main/res/layout/userlogin_fragment.xml
+++ b/app/src/main/res/layout/userlogin_fragment.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@drawable/login_bg"
     android:orientation="vertical">
 
@@ -49,7 +48,7 @@
 
                     <EditText
                         android:id="@+id/user_reg_phone"
-
+                        android:imeOptions="actionNext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -74,6 +73,7 @@
                     <EditText
                         android:id="@+id/user_reg_password"
                         android:layout_width="wrap_content"
+                        android:imeOptions="actionGo"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
