--- a/app/src/main/res/layout/part__my_item.xml
+++ b/app/src/main/res/layout/part__my_item.xml
@@ -5,7 +5,7 @@
     android:layout_margin="5dp"
     android:orientation="vertical">
     <LinearLayout
-        android:id="@+id/job_item"
+        android:id="@+id/my_job_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -13,25 +13,39 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_tree_item"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_margin="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="1"
+                android:id="@+id/my_job_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="兼职标题"
+                android:textColor="#fdfdfd"
+                android:textSize="14sp" />
+            <TextView
+                android:id="@+id/my_job_delete"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:text="删除"
+                android:textColor="#fdfdfd"
+                android:textSize="16sp" />
+        </LinearLayout>
+
 
         <TextView
-            android:id="@+id/job_title"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/my_job_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="兼职内容"
-            android:textColor="#fdfdfd"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/job_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="25dp"
             android:layout_weight="3"
             android:ellipsize="end"
             android:gravity="center_vertical"
@@ -46,17 +60,31 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="2">
 
+            <LinearLayout
+                android:layout_margin="5dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/my_job_status"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="right"
+                    android:text="审核状态"
+                    android:textColor="#fdfdfd"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="1dp"
                 android:layout_weight="1">
-
-
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -72,7 +100,7 @@
 
 
                 <TextView
-                    android:id="@+id/job_date"
+                    android:id="@+id/my_job_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
