--- a/app/src/main/res/layout/part_add_job.xml
+++ b/app/src/main/res/layout/part_add_job.xml
@@ -149,7 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
-                    android:hint="开始日期" />
+                    android:text="开始日期" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -162,7 +162,7 @@
                     android:layout_width="wrap_content"
                     android:textSize="15sp"
                     android:layout_height="wrap_content"
-                    android:hint="结束日期" />
+                    android:text="结束日期" />
             </LinearLayout>
             <LinearLayout
                 android:layout_margin="5dp"
@@ -181,7 +181,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
-                    android:hint="开始时间" />
+                    android:text="开始时间" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -194,7 +194,7 @@
                     android:layout_width="wrap_content"
                     android:textSize="15sp"
                     android:layout_height="wrap_content"
-                    android:hint="结束时间" />
+                    android:text="结束时间" />
             </LinearLayout>
             <LinearLayout
                 android:layout_margin="5dp"
