--- a/app/src/main/res/layout/part_my_job.xml
+++ b/app/src/main/res/layout/part_my_job.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/my_publish_godds_back"
+            android:id="@+id/my_job_back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
@@ -24,22 +24,20 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="我发布的"
+            android:text="我的兼职"
             android:textSize="20sp" />
-
-
 
     </RelativeLayout>
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/my_publish_refresh">
+        android:id="@+id/my_job_refresh">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/my_publish_goods_RecyclerView">
+            android:id="@+id/my_job_RecyclerView">
 
         </android.support.v7.widget.RecyclerView>
 
