--- a/app/src/main/res/layout/parttimejob_view.xml
+++ b/app/src/main/res/layout/parttimejob_view.xml
@@ -24,6 +24,15 @@
             android:gravity="center"
             android:text="兼职"
             android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/job_menu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"
+            android:layout_marginRight="0.5dp"
+            android:src="@drawable/friend_add" />
     </RelativeLayout>
 
     <include
