--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -252,7 +252,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="6dp"
                     android:layout_weight="4"
-                    android:text="我的发布" />
+                    android:text="我的商品" />
 
                 <ImageView
                     android:layout_width="0dp"
