--- a/app/src/main/res/layout/activity_group_publish.xml
+++ b/app/src/main/res/layout/activity_group_publish.xml
@@ -1,69 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical">
 
+    <include layout="@layout/grouppublish_title" />
 
-
-        <include layout="@layout/grouppublish_title" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="15dp"
-        android:layout_weight="3">
-
+        android:layout_margin="5dp"
+        >
         <LinearLayout
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
+                android:layout_gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:text="群组名称:"
-                android:textSize="15sp" />
+                />
 
             <EditText
+                android:id="@+id/publish_group_name"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="群组名称" />
 
+
         </LinearLayout>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#999999" />
         <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="0.8"
-    android:orientation="horizontal">
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:orientation="vertical">
 
-    <TextView
+
+            <EditText
+                android:id="@+id/publish_group_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="true"
+                android:gravity="top"
+                android:background="@null"
+                android:textSize="15sp"
+                android:hint="群组的介绍"
+                android:inputType="textMultiLine"
+                android:maxLength="140"
+                android:maxLines="10"
+                android:minLines="8"
+                android:scrollbars="vertical" />
+
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#999999" />
+        <LinearLayout
+            android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:text="群组介绍:"
-        android:textSize="15sp" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="群介绍" />
-
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -71,19 +88,31 @@
             android:textSize="15sp" />
 
         <EditText
+            android:id="@+id/publish_group_label"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:background="@null"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="给群组设个标签吧" />
+            android:textSize="15sp"
+            android:maxLines="1"
+            android:maxLength="15"
+            android:hint="动漫、篮球、二次元、、" />
 
     </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#999999" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:layout_weight="2">
+        android:layout_weight="1">
 
         <FrameLayout
             android:id="@+id/taoyu_publish_addimage"
@@ -102,7 +131,7 @@
                 android:textSize="16sp" />
 
             <ImageView
-
+                android:id="@+id/publish_group_add_image"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/taoyu_add"
@@ -110,13 +139,13 @@
 
 
         </FrameLayout>
-
         <LinearLayout
+            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view_1"
+                android:id="@+id/publish_group_image_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
