--- a/app/src/main/res/layout/taoyu_fabu.xml
+++ b/app/src/main/res/layout/taoyu_fabu.xml
@@ -71,7 +71,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -102,6 +102,7 @@
                     </FrameLayout>
 
                     <LinearLayout
+                        android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
